using System.Collections;
using UnityEngine;
using UnityEngine.SceneManagement; // Sahne geÃ§iÅŸi iÃ§in ÅŸart

public class HealthSystem : MonoBehaviour
{
    [Header("Health Settings")]
    public float maxHealth = 100f;
    public float currentHealth = 100f;

    [Header("Configuration")]
    [Tooltip("Bu script Player Ã¼zerindeyse bunu MUTLAKA iÅŸaretle!")]
    public bool isPlayerObject = false;
    public bool showHealthBar = true;

    [Header("Death Settings")]
    public float delayBeforeLoad = 2.5f; // Ã–lÃ¼m animasyonunu izleme sÃ¼resi

    [Header("Zombie Death Freeze")]
    [Tooltip("Zombi Ã¶lÃ¼nce AI scriptleri kapansÄ±n mÄ±?")]
    public bool disableAllBehaviourScriptsOnDeath = true;

    [Tooltip("Zombi Ã¶lÃ¼nce colliderlar kapansÄ±n mÄ±?")]
    public bool disableCollidersOnDeath = true;

    [Tooltip("Zombi Ã¶lÃ¼nce Ã¶lÃ¼m animasyonunun sonunda Animator donsun mu? (Son karede kalÄ±r)")]
    public bool freezeAnimatorOnDeath = true;

    [Tooltip("Animator'Ä±n Die state adÄ±. Animator'daki state adÄ± ile aynÄ± olmalÄ±.")]
    public string dieStateName = "Die";

    // Durum deÄŸiÅŸkenleri
    private bool isDead = false;
    private bool keepPositionFixed = false; // Ceset kaymasÄ±n diye pozisyonu kilitler
    private Vector3 deathPosition; // Ã–lÃ¼m anÄ±ndaki koordinat

    // BileÅŸenler
    private Animator animator;
    private CharacterController characterController;
    private MonoBehaviour[] cachedScripts;
    private Collider[] cachedColliders;
    private Rigidbody rb;

    public bool IsDead => isDead;

    void Start()
    {
        currentHealth = maxHealth;

        animator = GetComponent<Animator>();
        characterController = GetComponent<CharacterController>();
        rb = GetComponent<Rigidbody>();

        // Zombi iÃ§in: tÃ¼m script/collider'larÄ± Ã¶nceden cache'le (Ã¶lÃ¼mde hÄ±zlÄ± kapatmak iÃ§in)
        cachedScripts = GetComponents<MonoBehaviour>();
        cachedColliders = GetComponentsInChildren<Collider>(true);

        // Debug: Health bar ayarlarÄ±nÄ± kontrol et
        if (!isPlayerObject)
        {
            Debug.Log("ðŸ§Ÿ " + gameObject.name + " - HealthSystem baÅŸlatÄ±ldÄ±. showHealthBar: " + showHealthBar + ", MaxHealth: " + maxHealth);
            
            // ZombieManager'a kaydet (eÄŸer varsa ve henÃ¼z kayÄ±tlÄ± deÄŸilse)
            if (ZombieManager.Instance != null)
            {
                ZombieManager.Instance.RegisterZombie(this);
            }
        }
    }

    void Update()
    {
        // Ã–ldÃ¼kten sonra sahne yÃ¼klenene kadar pozisyonu Ã§ivile (keepPositionFixed)
        if (keepPositionFixed && isDead)
        {
            transform.position = deathPosition;
        }
    }

    public void TakeDamage(float damage)
    {
        // Zaten Ã¶lÃ¼yse hasar verme
        if (currentHealth <= 0 || isDead) return;

        // CanÄ± azalt (gerÃ§ek iÅŸlem)
        currentHealth -= damage;
        currentHealth = Mathf.Max(0, currentHealth); // Negatif olmasÄ±n

        // Can 0 veya altÄ±ndaysa Ã¶ldÃ¼r (gerÃ§ek iÅŸlem)
        if (currentHealth <= 0)
        {
            Die();
        }
    }

    public void Heal(float amount)
    {
        if (isDead) return;
        currentHealth += amount;
        if (currentHealth > maxHealth) currentHealth = maxHealth;
    }

    // HealthSystem.cs  (ONLY the Die() method - replace yours with this)

    void Die()
    {
        if (isDead) return;
        isDead = true;

        if (isPlayerObject)
        {
            HandlePlayerDeath();
            return;
        }

        // Lock corpse
        deathPosition = transform.position;
        keepPositionFixed = true;

        // HARD STOP: stop ALL attack components in children (in case they live on a child object)
        var attacks = GetComponentsInChildren<ZombieMeleeAttackTimed>(true);
        for (int i = 0; i < attacks.Length; i++)
        {
            if (attacks[i] != null) attacks[i].enabled = false; // triggers OnDisable() and stops coroutine
        }

        // Stop any Invoke() loops on this zombie and its children (e.g., ZombieScreamTimer)
        CancelInvoke();
        var childBehaviours = GetComponentsInChildren<MonoBehaviour>(true);
        for (int i = 0; i < childBehaviours.Length; i++)
        {
            if (childBehaviours[i] != null) childBehaviours[i].CancelInvoke();
        }

        // Stop movement/physics
        if (characterController != null) characterController.enabled = false;

        if (rb != null)
        {
            rb.linearVelocity = Vector3.zero;
            rb.angularVelocity = Vector3.zero;
            rb.isKinematic = true;
        }

        // Disable other scripts so they cannot change animator params
        if (disableAllBehaviourScriptsOnDeath)
        {
            var scripts = GetComponentsInChildren<MonoBehaviour>(true); // IMPORTANT: includes children now
            for (int i = 0; i < scripts.Length; i++)
            {
                MonoBehaviour s = scripts[i];
                if (s == null) continue;
                if (s == this) continue; // HealthSystem stays enabled
                s.enabled = false;
            }
        }

        // Disable colliders (best practice: disable triggers only so corpse can still block the player)
        if (disableCollidersOnDeath)
        {
            var cols = GetComponentsInChildren<Collider>(true);
            for (int i = 0; i < cols.Length; i++)
            {
                Collider c = cols[i];
                if (c == null) continue;

                if (c.isTrigger) c.enabled = false; // <-- key to stop damage triggers forever
            }
        }

        if (animator == null)
        {
            Debug.LogError("ðŸ§Ÿ " + gameObject.name + " - Animator yok, Ã¶lÃ¼m animasyonu oynatÄ±lamÄ±yor.");
            return;
        }

        animator.applyRootMotion = false;

        // Reset other triggers
        animator.ResetTrigger("Attack");
        animator.ResetTrigger("Scream");

        // Try trigger if it exists
        if (HasTrigger(animator, "Die"))
            animator.SetTrigger("Die");

        // Also set IsDead bool if it exists
        if (HasBool(animator, "IsDead"))
            animator.SetBool("IsDead", true);

        // Force-play Die state directly
        animator.Play(dieStateName, 0, 0f);

        // Zombi Ã¶ldÃ¼ÄŸÃ¼nde ZombieManager'a bildir
        if (ZombieManager.Instance != null)
        {
            ZombieManager.Instance.OnZombieDied(this);
        }

        // Freeze on last frame
        if (freezeAnimatorOnDeath)
            StartCoroutine(FreezeAnimatorAfterDeath());
    }


    private bool HasTrigger(Animator a, string name)
    {
        foreach (var p in a.parameters)
            if (p.name == name && p.type == AnimatorControllerParameterType.Trigger)
                return true;
        return false;
    }

    private bool HasBool(Animator a, string name)
    {
        foreach (var p in a.parameters)
            if (p.name == name && p.type == AnimatorControllerParameterType.Bool)
                return true;
        return false;
    }


    private IEnumerator FreezeAnimatorAfterDeath()
    {
        // Die state'e gerÃ§ekten girene kadar kÄ±sa sÃ¼re bekle (blend/geÃ§iÅŸler iÃ§in)
        yield return null;
        yield return new WaitForSeconds(0.05f);

        if (animator == null) yield break;

        // Die state'e girene kadar bekle (max bekleme gÃ¼venliÄŸi ile)
        float safety = 2f;
        float t = 0f;

        while (t < safety)
        {
            AnimatorStateInfo st = animator.GetCurrentAnimatorStateInfo(0);
            if (st.IsName(dieStateName))
                break;

            t += Time.deltaTime;
            yield return null;
        }

        // Die state sÃ¼resini bekle, sonra dondur
        AnimatorStateInfo state = animator.GetCurrentAnimatorStateInfo(0);

        // EÄŸer Die'a giremediyse yine de kÃ¼Ã§Ã¼k bir sÃ¼re bekleyip dondur
        float wait = state.length > 0.01f ? state.length : 0.8f;

        yield return new WaitForSeconds(wait);

        // Son pozda kalmasÄ± iÃ§in animator'Ä± dondur
        animator.speed = 0f;

        // Alternatif: animator.enabled = false; (pose kalÄ±r ama bazÄ± projelerde farklÄ± davranabilir)
        // animator.enabled = false;
    }

    void HandlePlayerDeath()
    {
        Debug.Log("ðŸ’€ OYUNCU Ã–LDÃœ! Pozisyon kilitlendi, animasyon oynatÄ±lÄ±yor...");

        // 1. Ã–lÃ¼m anÄ±ndaki pozisyonu kaydet
        deathPosition = transform.position;
        keepPositionFixed = true; // Update fonksiyonunda kitlemeyi baÅŸlat

        // 2. Fizik ve hareketi kapat (DÃ¼ÅŸmeyi/KaymayÄ± Ã¶nler)
        if (characterController != null) characterController.enabled = false;

        // Varsa Rigidbody'yi de dondur
        if (rb != null)
        {
            rb.linearVelocity = Vector3.zero;
            rb.angularVelocity = Vector3.zero;
            rb.isKinematic = true;
        }

        // 3. Ã–lÃ¼m animasyonunu oynat
        if (animator != null)
        {
            animator.applyRootMotion = false; // Animasyon karakteri hareket ettirmesin
            animator.SetTrigger("Die");
        }

        // 4. Belirlenen sÃ¼re kadar bekle, sonra sahneyi deÄŸiÅŸtir
        Invoke(nameof(LoadDeadScreenScene), delayBeforeLoad);
    }

    void LoadDeadScreenScene()
    {
        Debug.Log("ðŸŽ¬ DeadScreen sahnesine geÃ§iliyor...");

        // Mouse imlecini serbest bÄ±rak (MenÃ¼de tÄ±klayabilmek iÃ§in)
        Cursor.lockState = CursorLockMode.None;
        Cursor.visible = true;

        // ZamanÄ± normale dÃ¶ndÃ¼r
        Time.timeScale = 1f;

        // Sahneyi yÃ¼kle
        SceneManager.LoadScene("DeadScreen");
    }

    // Basit GUI Can BarÄ±
    void OnGUI()
    {
        if (!showHealthBar || isDead) return;

        float healthPercent = currentHealth / maxHealth;

        // Player iÃ§in ekranÄ±n sol Ã¼st kÃ¶ÅŸesinde health bar gÃ¶ster
        if (isPlayerObject)
        {
            float barWidth = 150f;
            float barHeight = 15f;
            float offsetX = 15f;
            float offsetY = 15f;

            // Arka plan (kÄ±rmÄ±zÄ±)
            GUI.color = Color.red;
            GUI.DrawTexture(new Rect(offsetX, offsetY, barWidth, barHeight), Texture2D.whiteTexture);

            // Can barÄ± (yeÅŸil -> kÄ±rmÄ±zÄ±)
            GUI.color = Color.Lerp(Color.red, Color.green, healthPercent);
            GUI.DrawTexture(new Rect(offsetX, offsetY, barWidth * healthPercent, barHeight), Texture2D.whiteTexture);

            // KenarlÄ±k
            GUI.color = Color.white;
            DrawRectOutline(new Rect(offsetX, offsetY, barWidth, barHeight), 1f);

            // Can yÃ¼zdesi yazÄ±sÄ± (daha kÃ¼Ã§Ã¼k font)
            GUI.color = Color.white;
            GUIStyle labelStyle = new GUIStyle();
            labelStyle.alignment = TextAnchor.MiddleCenter;
            labelStyle.normal.textColor = Color.white;
            labelStyle.fontSize = 11;
            GUI.Label(new Rect(offsetX, offsetY, barWidth, barHeight),
                     "HP: " + Mathf.Ceil(currentHealth) + "/" + maxHealth,
                     labelStyle);

            return;
        }

        // Zombiler iÃ§in kafalarÄ±nÄ±n Ã¼stÃ¼nde health bar gÃ¶ster
        Camera mainCam = Camera.main;
        if (mainCam == null)
        {
            // EÄŸer Camera.main yoksa, sahnedeki tÃ¼m kameralarÄ± kontrol et
            Camera[] cameras;
            #if UNITY_2023_1_OR_NEWER
            cameras = FindObjectsByType<Camera>(FindObjectsSortMode.None);
            #else
            cameras = FindObjectsOfType<Camera>();
            #endif
            if (cameras.Length > 0)
            {
                mainCam = cameras[0];
            }
            else
            {
                return;
            }
        }

        // Zombinin baÅŸÄ±nÄ±n Ã¼stÃ¼nde bir nokta hesapla (yÃ¼kseklik ayarlanabilir)
        Vector3 worldPos = transform.position + Vector3.up * 2.2f;
        Vector3 screenPos = mainCam.WorldToScreenPoint(worldPos);

        // EÄŸer zombi kameranÄ±n arkasÄ±ndaysa gÃ¶sterme
        if (screenPos.z > 0)
        {
            float barWidth = 60f;
            float barHeight = 6f;
            float offsetY = 25f; // Bar'Ä±n zombinin Ã¼stÃ¼nde ne kadar yukarÄ±da olacaÄŸÄ±

            // Arka plan (koyu kÄ±rmÄ±zÄ±/siyah) - her zaman gÃ¶ster
            GUI.color = new Color(0.2f, 0f, 0f, 0.8f);
            GUI.DrawTexture(new Rect(screenPos.x - barWidth / 2, Screen.height - screenPos.y - offsetY, barWidth, barHeight), Texture2D.whiteTexture);

            // Can barÄ± (yeÅŸil -> kÄ±rmÄ±zÄ±) - healthPercent'e gÃ¶re
            if (healthPercent > 0)
            {
                GUI.color = Color.Lerp(Color.red, Color.green, healthPercent);
                GUI.DrawTexture(new Rect(screenPos.x - barWidth / 2, Screen.height - screenPos.y - offsetY, barWidth * healthPercent, barHeight), Texture2D.whiteTexture);
            }

            // KenarlÄ±k (beyaz, ince)
            GUI.color = Color.white;
            DrawRectOutline(new Rect(screenPos.x - barWidth / 2, Screen.height - screenPos.y - offsetY, barWidth, barHeight), 0.5f);
        }
    }

    // KenarlÄ±k Ã§izmek iÃ§in yardÄ±mcÄ± fonksiyon
    void DrawRectOutline(Rect rect, float thickness)
    {
        // Ãœst
        GUI.DrawTexture(new Rect(rect.x, rect.y, rect.width, thickness), Texture2D.whiteTexture);
        // Alt
        GUI.DrawTexture(new Rect(rect.x, rect.y + rect.height - thickness, rect.width, thickness), Texture2D.whiteTexture);
        // Sol
        GUI.DrawTexture(new Rect(rect.x, rect.y, thickness, rect.height), Texture2D.whiteTexture);
        // SaÄŸ
        GUI.DrawTexture(new Rect(rect.x + rect.width - thickness, rect.y, thickness, rect.height), Texture2D.whiteTexture);
    }
}